# network-defender

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default_credentials.yaml  os_signatures.yaml  scan_profiles.yaml  service_patterns.yaml
docs/: faz-1-temel-simulasyon.md  faz-2-gymnasium-ortami.md  faz-3-egitim-ve-wrappers.md  faz-4-web-entegrasyonu.md  reward-system.md  training-report-200k-tiny.md
lab/: docker-compose.yml  lab_generator.py
scripts/: demo_sim_network.py  evaluate_agent.py  train_ppo.py
src/network_scanner/: __init__.py  __main__.py  main.py
src/network_scanner/aggregator/: __init__.py  state_builder.py  vectorizer.py
src/network_scanner/core/: __init__.py  cache.py  config.py  exceptions.py  interfaces.py  logging_setup.py  models.py  utils.py
src/network_scanner/orchestrator/: __init__.py  capability.py  scan_pipeline.py
src/network_scanner/rl/: actions.py  env.py  rewards.py  scenarios.py  sim_network.py  wrappers.py
src/network_scanner/scanners/: __init__.py  host_discovery.py  os_fingerprinter.py  port_scanner.py  service_detector.py  snmp_enumerator.py  vuln_assessor.py
tests/integration/: conftest.py
tests/mocks/: fake_network.py  fake_services.py
tests/unit/: conftest.py  test_actions.py  test_env.py  test_models.py  test_port_scanner.py  test_rewards.py  test_scan_pipeline.py  test_scenarios.py  test_service_detector.py  test_sim_network.py  test_vectorizer.py
web/: app.py  index.html
