[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-scanner"
version = "0.1.0"
description = "Network security simulation and RL training environment"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "requests>=2.31.0",
    "paramiko>=3.4.0",
    "nvdlib>=0.7.6",
    "pysnmp-lextudio>=6.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
